# HackMoney-SubscriptionOrchestrator

./: .gitignore  Makefile  README.md
agent-nexus/: package-lock.json  (+2 more)
backend/: .env.local.example  DOCS_RETRIEVAL_FLOW.md  JSON_EXTRACTION_FIX.md  YELLOW_INITIALIZER_REFACTOR.md  check_embedding.py  config.py  main.py  pyproject.toml  requirements.txt  routes.py  sample.env  test_docs_retrieval.py  test_json_extraction.py  test_openrouter_embeddings.py
backend/agent/: graph.py  llm.py  prompts.py  runner.py  state.py
backend/agent/llm/: __init__.py  analysis.py  coding.py  error_handling.py  planning.py  summary.py  utils.py
backend/agent/nodes/: __init__.py  architecture.py  context.py  maintenance.py  plan.py  propose.py  read.py  scan.py  summary.py  validate.py  validation.py
backend/agent/prompts/: __init__.py  prompts.py  yellow.py
backend/agent/tools/: __init__.py  command_executor.py  vector_store.py
backend/data/: enriched_docs.json
backend/scripts/: test_agent_flow.py  test_error_handling_flow.py
backend/services/: agent_service.py  langgraph_agent.py  langgraph_stream.py  pending_diff_service.py  sandbox_fs_service.py  upload_service.py  vector_store.py
backend/utils/: config.py  dotenv.py  helper_functions.py  intent.py  logger.py  schema.py
backend/utils/prompts/: loader.py  master_prompt.txt  tool_instructions.txt
backend/utils/schemas/: agent.py  upload.py  yellow.py
backend/vector_db_setup/: README.md  VECTOR_DATABASE.md  doc_enrichment.py  ingest_docs.py  load_enriched_to_vector_db.py  test_enrichment.py  test_single_enrichment.py
(+110 files in other folders)
