[project]
name = "hackmoney-llm-backend"
version = "0.1.0"
description = "LLM backend for HackMoney Subscription Orchestrator"
requires-python = ">=3.10"

dependencies = [
  "fastapi==0.115.8",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.8.2",
  "python-dotenv==1.0.1",
  "langgraph==0.2.18",
  "langchain-core==0.2.38",
  "langchain-google-genai==0.3.0",
  "google-genai==0.4.0",
]

[tool.uvicorn]
factory = false
